# cartesi-coprocessor-eigenlayer

./: Cargo.toml  Dockerfile
contracts/: .gitmodules
contracts/src/: MyContract.sol
src/: main.rs
